# obsidian-folio

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  ROADMAP.md  config.example.json  manifest.json  package-lock.json  package.json  styles.css  vault.config.json.example
.claude/: settings.local.json
.github/workflows/: release.yml
backend/: douban.py  notes.py  pyproject.toml  requirements.txt  vault_tool.py
docs/: DEVELOPER.md  ROADMAP.md
docs/superpowers/plans/: 2026-03-27-typescript-rewrite.md  2026-03-28-folio-cleanup.md  2026-03-28-multi-source-search.md
docs/superpowers/specs/: 2026-03-27-test-plan-design.md  2026-03-27-typescript-rewrite-design.md  2026-03-28-folio-cleanup-design.md  2026-03-28-multi-source-search-design.md
src/: cache.ts  douban.ts  main.ts  modal.ts  notes.ts  settings.ts  sources.ts
tests/: conftest.py  test_douban.py  test_notes.py  test_vault_tool.py
