[project]
name = "douban-obsidian-backend"
version = "0.1.0"
description = "Python backend for douban-obsidian: scrape Douban and write Obsidian notes"
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4",
    "thefuzz",
    "firecrawl-py",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
